fix project tree horz scrollbars so they're only shown when necessary

--- a/src/styles/jsTreeTheme.less
+++ b/src/styles/jsTreeTheme.less
@@ -27,7 +27,7 @@
 .jstree-brackets li > a {
     padding-left: @spriteSize18 + 10000;
     margin-left: -10000px;
-    width: 100%;
+    width: 100% - @spriteSize18;
 }
 
 .jstree li { 
